--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" ng-app="church">
   <head>
     <meta charset="utf-8">
-    <title>church</title>
+    <title>Cocoa Beach Community Church</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
